# workshop_estrutura

./: .gitignore  pyproject.toml
app/pipeline/: extract.py  transform.py
data/input/: Anexo_86835012_638591715508267840.xlsx
tests/: teste_pipeline.py
