[tool.poetry]
name = "workshop-estrutura"
version = "0.1.0"
description = "Meu projeto de etl"
authors = ["Rafael <sathler_754@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
